package proxy.service;

import proxy.model.Usuario;

public interface IServicioSpotify {
    public String descargarCancion(Usuario usuario);
}
